# characterization_nxp3220

./: README  groups  project.config
apps/lvcc_pc/ASVCommandLib/: ASVCommandLib.vcxproj  asv_command.c  asv_command.h
apps/lvcc_pc/LVCC_PC/: ASV.rc  ASV.vcxproj  ASVDlg.cpp  ASVDlg.h  ASVTest.cpp  ASVTest.h  Comport.cpp  resource.h
asv_images/bus_freq/busfreq_v_1_0/: bl1-nxp3220.bin.raw  bl2-vtk.bin.raw  bl32.bin.raw  nxp3220-vtk-asv-devfs.dtb  root.img.REMOVED.git-id  u-boot.bin.hash  u-boot.bin.raw  u-boot.bin.sign
asv_images/cpu_freq/cpu_freq_v_0_1/: nxp3220-asv-cpufreq.dtb  u-boot.bin.hash  u-boot.bin.raw  u-boot.bin.sign
cpu_freq/: .depend  Makefile  asv_command.c  asv_command.h  asv_test.c  asv_type.h  cpu_num.sh  cpu_test.cpp  cpuhz.sh  dvfsutil.c  dvfsutil.h  env.mk  hwio.c
devfreq/: Makefile  env.mk  nxp3220_devfreq.js
devfreq/json/: Makefile  README
devfreq/libdrm/: Makefile
devfreq/libnx_video_alloc/: Makefile
devfreq/libnx_video_alloc/nx-video-alloc/: configure.ac
devfreq/libnx_video_alloc/nx-video-alloc/src/: Makefile.am  nx_video_alloc.c  nx_video_alloc.h
devfreq/libnx_video_api/: Makefile
devfreq/libnx_video_api/nx-video-api/: configure.ac
devfreq/libnx_video_api/nx-video-api/src/: Makefile.am  nx_video_api.h  nx_video_dec.c
devfreq/main/: Makefile  main.cpp  task.cpp  task.h
devfreq/nx_vpu/: Makefile
devfreq/nx_vpu/nx_vpu_dump/: configure.ac
devfreq/nx_vpu/nx_vpu_dump/src/: Makefile.am  main.c  nx_video_extractor.c  nx_video_extractor.h  nx_video_utils.c  nx_video_utils.h
devfreq/nx_vpu/nx_vpu_dump/src/ffmpeg/ffmpeg-2.8.6-arm32/lib/: libavdevice.so.56.4.100  libavfilter.so.5.40.101  libavformat.so.56.40.101  libavutil.so.54.31.100  libswresample.so.1.2.101
devfreq/nx_vpu/nx_vpu_test/: configure.ac
devfreq/nx_vpu/nx_vpu_test/src/: Makefile.am  main.c  nx_list.c  nx_list.h  nx_video_utils.c
devfreq/nx_vpu/nx_vpu_test/src/data/bitstream/: bitstream_0000.bit  bitstream_0001.bit  bitstream_0002.bit  bitstream_0003.bit  bitstream_0004.bit
devfreq/nx_vpu/nx_vpu_test/src/data/golden/: golden_0000.yuv  golden_0001.yuv  golden_0002.yuv  golden_0003.yuv
files/: aeskey.txt  bootkey  bootkey.pub.hash  nsih_bl1.txt  nsih_uboot.txt  nxp3220_vtk_asv_busfreq.txt  nxp3220_vtk_asv_cpufreq.txt  params_env_asv_busfreq.txt  partmap_emmc_asv_cpufreq.txt  partmap_emmc_asv_devfreq.txt  userkey  userkey.pub.hash
firmwares/: bl1-nxp3220.bin.enc.raw
scripts/: .build.common.sh.swp  .build.nxp3220-vtk-asv-bus.sh.swp  build.nxp3220-vtk-asv-bus.sh  build.nxp3220-vtk-asv-cpu.sh  build_bsp.sh  partmap_fastboot.sh  udown.bootloader.sh  udown.nxp3220-vtk-boot.sh  usb-down.sh
scripts/configs/: build.common.sh  build.nxp3220-vtk-asv-bus.sh  build.nxp3220-vtk-asv-cpu.sh  env_common.sh
